# Hackathon-02-Evolution-of-Todo-App

Phase-01/Cli-Todo/: .gitignore  CLAUDE.md  pyproject.toml
Phase-01/Cli-Todo/.claude/agents/: python-clean-code-agent.md  python-spec-architect.md
Phase-01/Cli-Todo/.specify/agents/python-test-engineer/: instructions.md
Phase-01/Cli-Todo/.specify/memory/: constitution.md
Phase-01/Cli-Todo/history/prompts/constitution/: 03-create-phase-i-constitution.constitution.prompt.md
Phase-01/Cli-Todo/history/prompts/core-todo-functionality/: 04-clarify-ambiguities.spec.prompt.md  05-create-implementation-plan.plan.prompt.md  06-generate-tasks.tasks.prompt.md  07-implement-core-functionality.misc.prompt.md
Phase-01/Cli-Todo/history/prompts/general/: 0001-create-python-test-engineer-agent.general.prompt.md  01-create-python-spec-architect-agent.general.prompt.md  02-create-python-test-engineer-agent.general.prompt.md  08-cli-ux-improvements.misc.prompt.md
Phase-01/Cli-Todo/specs/001-core-todo-functionality/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
Phase-01/Cli-Todo/specs/001-core-todo-functionality/checklists/: requirements.md
Phase-01/Cli-Todo/specs/001-core-todo-functionality/contracts/: task-service.yaml
Phase-01/Cli-Todo/src/: main.py
Phase-01/Cli-Todo/src/cli/: __init__.py  ui.py
Phase-01/Cli-Todo/src/models/: task.py
Phase-01/Cli-Todo/src/services/: __init__.py
Phase-01/Cli-Todo/tests/: test_ui.py
Phase-02/Todo-Full-Stack/: CLAUDE.md  package.json
Phase-02/Todo-Full-Stack/backend/: CLAUDE.md  fix_todo_schema.py  pyproject.toml  requirements.txt
Phase-02/Todo-Full-Stack/backend/alembic/versions/: 20260117_0946_aab32624893a_add_todos_table.py
Phase-02/Todo-Full-Stack/backend/app/: main.py
Phase-02/Todo-Full-Stack/backend/app/models/: __init__.py  reminder.py  user.py
Phase-02/Todo-Full-Stack/backend/app/routers/: health.py  occurrences.py  preferences.py  push.py  reminders.py  todos.py
Phase-02/Todo-Full-Stack/backend/app/schemas/: error.py  occurrence.py  push_subscription.py  reminder.py  user_preferences.py
Phase-02/Todo-Full-Stack/backend/app/services/: tag.py  todo.py
Phase-02/Todo-Full-Stack/backend/tests/: test_todos.py
Phase-02/Todo-Full-Stack/frontend/: CLAUDE.md  next.config.js  package.json  (+1 more)
Phase-03/AI-Chatbot-Fullstack/: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  README.md
Phase-04/Kubernetes-Deployment/: .env.example  .gitignore  CLAUDE.md  README.md
(+282 files in other folders)
